# texttaker

./: .gitignore  LICENSE  README.md  pyproject.toml
tests/: test_texttaker.py
texttaker/: __main__.py  ocr.py  verifiers.py  writeWordDoc.py
